--- a/web_app/templates/template.html
+++ b/web_app/templates/template.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>RaspiBot</title>
     {% block styles %}	
     {% endblock %}
     {% block dependencies %}	
