--- a/web_app/templates/robot_controls.html
+++ b/web_app/templates/robot_controls.html
@@ -39,6 +39,8 @@
   <div class='collapsStyle'>
     <ui-button raised> <span class='optionTxt'> Pretty print </span> </ui-button>
     <p id='temperature'> <span class='optionTxt'> Temperature </span> </p>
+    <p id='tempVal'> xd </p>
     <p id='CPUusage'>  <span class='optionTxt'>  CPU usage  </span>  </p>
+    <p id='CPUVal'> xdd</p>
   </div>
 {% endblock %}
