--- a/web_app/templates/robot_controls.html
+++ b/web_app/templates/robot_controls.html
@@ -1,46 +1,99 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
-{% block Visuals %}
-  <div class='collapsStyle'>
-    <ui-switch > <span class='optionTxt'> Turn on processing </span> </ui-switch>
-    <ui-switch > <span class='optionTxt'> img proc 1 </span> </ui-switch>
-    <ui-switch > <span class='optionTxt'> img proc 2 </span> </ui-switch>
-    <ui-switch > <span class='optionTxt'> img proc 3 </span> </ui-switch>
-    <ui-switch > <span class='optionTxt'> img proc 4 </span> </ui-switch>
-    <ui-slider show-marker snap-to-steps :step='10'></ui-slider>
-  </div>
-
+{% block modalTemplates %}
+<!-- template for image processing panel -->
+<script type="text/x-template" id="imgProcessingPanel">
+  <transition name="modal">
+    <div class="modal-mask">
+      <div class="modal-wrapper">
+          <div class="modal-container">
+            <div class="modal-header">
+              <slot name="header">
+                xdd
+              </slot>
+            </div>
+            
+            <div class="modal-body">
+                <slot name="body">
+                  body
+                </slot>
+            </div>
+            
+            <div class="modal-footer">
+              <slot name="footer">
+                xd
+                <button class="modal-default-button" @click="$emit('close')">
+                  OK
+                </button>
+              </slot>
+            </div>
+          </div>
+      </div>
+    </div>
+  </transition>
+</script>
 {% endblock %}
 
-{% block Audio %}
-  
-  <div class='collapsStyle'>
-    <span class='optionTxt'> Tutaj coś będzie</span>
-  </div>
+{% block Visuals %}
+<div class='collapsStyle'>
+  <ui-button id="showImgProcessing" raised @click="showProcessing = true" v-on:click="openProcessingPanel">  
+    <span class='optionTxt'> Processing Panel </span>
+  </ui-button>
 
+  <modal v-if="showProcessing" @close="showProcessing=false">
+  </modal>
+  <!--
+  <ui-button  raised>
+    <span class='optionTxt'> img proc 1 </span>
+  </ui-button>
+  <ui-button  raised>
+    <span class='optionTxt'> img proc 2 </span>
+  </ui-button>
+  <ui-button  raised>
+    <span class='optionTxt'> img proc 3 </span>
+  </ui-button>
+  <ui-button  raised>
+    <span class='optionTxt'> img proc 4 </span>
+  </ui-button  raised>
+-->
+
+  <ui-slider show-marker snap-to-steps :step='10'></ui-slider>
+</div>
+{% endblock %} 
+
+{% block Audio %}
+<div class='collapsStyle'>
+  <ui-button v-on:click="openAudioPanel"><span class='optionTxt'> Audio Panel</span></ui-button>
+</div>
 {% endblock %}
 
 {% block Features %}
-  <div class='collapsStyle'>
-    <ui-switch> <span class='optionTxt'>Turn on laser </span></ui-switch>
-    <ui-switch> <span class='optionTxt'>Turn on flashlight</span> </ui-switch>
-    <ui-switch> <span class='optionTxt'>Generate simple sound </span> </ui-switch>
-  </div>
-{% endblock %}
+<div class='collapsStyle'>
+  <ui-button  raised v-on:click="switchLaser">
+    <span class='optionTxt'>Turn on laser </span>
+  </ui-button>
+  <ui-button  raised v-on:click="switchFlashlight">
+    <span clas1=[*s='optionTxt'>Turn on flashlight</span>
+  </ui-button>
+  <ui-button  raised v-on:click="buzz">
+    <span class='optionTxt'>Generate simple sound </span>
+  </ui-button>
+</div>
+{% endblock %} 
 
 {% block Options %}
-  <div class='collapsStyle'>
-    <ui-button raised> <span class='optionTxt'> Run diagnostics </span> </ui-button>
-    <ui-switch color='accent'> <span class='optionTxt'> Tu też coś będzie </span> </ui-switch>
-  </div>
+<div class='collapsStyle'>
+  <ui-button  raised>
+    <span class='optionTxt' v-on:click="openDiagnosticsPanel"> Run diagnostics </span>
+  </ui-button>
+</div>
 {% endblock %}
 
-{% block stats %}
-  <div class='collapsStyle'>
-    <ui-button raised> <span class='optionTxt'> Pretty print </span> </ui-button>
-    <p id='temperature'> <span class='optionTxt'> Temperature </span> </p>
-    <p id='tempVal'> xd </p>
-    <p id='CPUusage'>  <span class='optionTxt'>  CPU usage  </span>  </p>
-    <p id='CPUVal'> xdd</p>
-  </div>
+{% block robotTab %}
+<canvas class="minimap" width="300px" height="300px"></canvas>
+<div id="data">
+  <div id="cpuUsage">cpu</div>
+  <div id="temperature">temp</div>
+  <div id="options">options</div>
+</div>
 {% endblock %}
